사진 가운데 정렬

--- a/Section6/css/picture.css
+++ b/Section6/css/picture.css
@@ -93,16 +93,19 @@ body {
     width: 64rem;
     display: flex;
     gap: 2.4rem;
+    justify-content: center;
+    
     
 }
  
 .CSS_이미지 {
-    width: 300px;
+    width: 640px;
     
-    object-fit: contain;
-    border-radius: 24px;
+    object-fit: cover;
+    border-radius: 2.4rem;
     display: flex;
     flex-direction: column;
+
     aspect-ratio: 1 / 1;
 
 }
