--- a/Section6/css/picture.css
+++ b/Section6/css/picture.css
@@ -69,13 +69,13 @@ body {
     line-height: 2.4rem;
 }
 
-/* .CSS_메인 {
+.CSS_메인 {
     display: flex;
     width: 100%;
     height: 100%;
     gap: 4rem;
     justify-content: center;
-} */
+}
 
 .CSS_레이아웃 {
     margin: 0 2rem 4rem;
@@ -90,19 +90,21 @@ body {
     font-weight: 700;
 }
 
-/* .CSS_이미지영역 {
-    width: 640px;
-    height: 640px;
+.CSS_이미지영역 {
+
     display: flex;
     gap: 2.4rem;
     justify-content: center;
-} */
+}
  
 .CSS_이미지 {
     object-fit: cover;
     display: flex;
     flex-direction: column;
     justify-content: center;
+
     aspect-ratio: 1 / 1;
+
+    border-radius: 24px; align-items: center;
 
 }
