--- a/depth01/myDiary_detail.css
+++ b/depth01/myDiary_detail.css
@@ -7,21 +7,21 @@
     font-family: 'Pretendard-Regular';
 }
 
-html {
-    font-size: 10px;
+html { font-size: 10px;}
+
+a {
+    text-decoration: none;
+    display: flex;
+    align-items: center;
 }
+
+.stop-scrolling { height: 100%; overflow: hidden;}
 
 @font-face {
     font-family: 'Pretendard-Regular';
     src: url('https://fastly.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
     font-weight: 400;
     font-style: normal;
-}
-
-a {
-    text-decoration: none;
-    display: flex;
-    align-items: center;
 }
 
 .container {
@@ -212,6 +212,117 @@ a {
     }
 }
 
+.content__copy {
+    width: 10rem;
+    height: 3.2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #f2f2f2;
+    border-radius: 0.8rem;
+    opacity: 90%;
+
+    position: relative;
+    transform: translate(520%, -220%);
+
+    @media (max-width: 375px) {
+        transform: translate(190%, -220%);
+    }
+}
+
+.content__copy:hover {
+    background-color: #fff;
+    transition: 0.2s;
+}
+
+.copy__icon {
+    margin-top: 0.4rem;
+}
+
+.copy__text {
+    margin: 0.2rem;
+}
+
+.container__toast {
+    width: 60rem;
+    height: 6rem;
+    background-color: #FFBE98;
+    display: none;
+    justify-content: center;
+    align-items: center;
+    border-radius: 1.6rem;
+    position: fixed;
+    bottom: 5%;
+    opacity: 0%;
+
+    animation-name: TOAST;
+    animation-duration: 2s;
+    animation-timing-function: ease-out;
+}
+
+@keyframes TOAST {
+    from {
+        opacity: 100%;
+    }
+    to {
+        opacity: 0%;
+    }
+}
+
+.toast__text {
+    color: #fff;
+    font-size: 2rem;
+    font-weight: 600;
+}
+
+.container__modal {
+    display: flex;
+    justify-content: center;
+    position: absolute;
+}
+
+.modal__bg {
+    width: 100%;
+    height: 150%;
+    background-color: #222222bb;
+    display: none;
+    position: absolute;
+    z-index: 1;
+}
+
+.modal__delete {
+    width: 48rem;
+    height: 20rem;
+    border-radius: 2.4rem;
+    background-color: #f2f2f2;
+    display: none;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+    z-index: 2;
+    
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.delete__btn {
+    display: flex;
+    gap: 1rem;
+}
+
+.delete__title {
+    font-size: 2.4rem;
+    font-weight: 600;
+}
+
+.delete__desc {
+    font-size: 2rem;
+    font-weight: 600;
+}
+
 .container__edit {
     width: 114.8rem;
 
@@ -265,7 +376,10 @@ label {
     gap: 1.6rem;
 }
 
-.btn__cancel, .btn__submit {
+.btn__cancel,
+.btn__submit,
+.btn__cancel2,
+.btn__delete2 {
     width: 11.6rem;
     height: 4.8rem;
     border: 0.2rem solid #ddd;
@@ -276,7 +390,9 @@ label {
     align-items: center;
 }
 
-.btn__cancel:hover {
+.btn__cancel:hover,
+.btn__cancel2:hover,
+.btn__delete2:hover {
     background-color: #767676;
     color: #fff;
     border: 0.2rem solid #FCFCFC;
