--- a/section05/css/index.css
+++ b/section05/css/index.css
@@ -25,24 +25,34 @@
 
 .menu-list li {
   color: var(--gray-400);
-
   padding: var(--gap-sm) var(--gap-xs);
   font-size: 2.4rem;
   font-weight: var(--weight-medium);
+  background-color: var(--gray-w);
+  cursor: pointer;
 }
 
 .menu-list li.active {
   border-bottom: 2px solid var(--gray-b);
-}
-
-.menu-list li.active a {
   color: var(--gray-b);
   font-weight: bold;
+}
+
+.menu-list li button {
+  all: unset;
 }
 
 .main {
   width: 100%;
   height: 100%;
+}
+
+.content {
+  display: none;
+}
+
+.content.active {
+  display: block;
 }
 
 .main-content {
