--- a/css/index.css
+++ b/css/index.css
@@ -30,7 +30,7 @@ header {
 
 main {
     width: 100vw;
-    height: 78rem;
+    height: 74rem;
 
     @media (max-width: 1024px) {
         display: flex;
@@ -39,12 +39,11 @@ main {
 }
 
 footer {
+    position: fixed;
+    bottom: 0;
+    z-index: 10;
     width: 100vw;
     height: 7rem;
-    @media (max-width: 1024px) {
-        position: fixed;
-        bottom: 0;
-    }
 }
 
 .noto-sans-kr {
@@ -115,7 +114,7 @@ div.tab-view > button
     font-size: 2rem;
 }
 
-div.tab-view > button[disabled=true]
+div.tab-view > button.inactive
 {
     color: var(--lightgray);
 }
@@ -176,7 +175,7 @@ div.flexcontainer {
 div.flexcontainer > div.flexchild-left {
     width: max(60vw, 100%);
     padding-right: 15vw;
-    height: 73rem;
+    height: 100%;
     padding-left: 15vw;
     /* border: 1px solid red; */
     display: flex;
@@ -220,7 +219,7 @@ div.flexcontainer > div.flexchild-right {
         width: 70vw;
         margin: auto;
         height: fit-content;
-    } */
+    }
 }
 
 form.diary-util {
@@ -421,14 +420,16 @@ li.flexchild > button.listitem-close-btn
     top: 0;
     left: 100%;
     transform: translateX(-100%);
+    cursor: pointer;
 }
 
 select, option
 {
     font-size: max(0.75rem, 0.75vmax);
     background: var(--lightgray);
-    width: 5rem;
+    width: fit-content;
     border-radius: 1rem;
+    padding-block: 0.25rem;
     @media (max-width: 1024px) {
         font-size: max(1rem, 1vmax);
     }
@@ -439,10 +440,10 @@ div.selection-tabview
     display: flex;
     justify-content: space-between;
     @media (max-width: 1024px) {
-        z-index: 10;
-        position: absolute;
-        margin-left: 6vw;
-        bottom: anchor(--list-anchor top);
+        /* z-index: 10;
+        position: absolute; */
+        /* margin-left: 6vw; */
+        /* bottom: anchor(--list-anchor top); */
     }
 }
 
@@ -452,12 +453,14 @@ button#write-btn
     color: white;
     font-size: max(0.75rem, 0.75vmax);
     border-radius: 1rem;
-    width: 5rem;
+    width: fit-content;
+    height: fit-content;
+    padding-inline: 0.25rem;
     @media (max-width: 1024px) {
-        z-index: 10;
-        position: absolute;
-        margin-right: 6vw;
-        bottom: anchor(--list-anchor top);
+        /* z-index: 10; */
+        /* position: absolute; */
+        /* margin-right: 6vw; */
+        /* bottom: anchor(--list-anchor top); */
         font-size: max(1rem, 1vmax);
     }
 }
@@ -472,6 +475,7 @@ li.flexchild:hover
 {
     opacity: 0.8;
     transform: scale(1.1);
+    transition-duration: 0.5s;
 }
 
 ul.flexlist
@@ -528,7 +532,7 @@ li.diary-listitem.flexchild::marker {
 
 a.anchor-nodeco {
     all: unset;
-    cursor: grab;
+    cursor: help;
     position: absolute;
     width: 90%;
     top: 0;
@@ -551,7 +555,6 @@ div.scroll-up-btn {
     position: fixed;
     right: 10vw;
     bottom: 10vh;
-    
 }
 
 div.scroll-up-btn > i {
@@ -561,4 +564,45 @@ div.scroll-up-btn > i {
 div.scroll-up-btn > p {
     color: var(--lightgray);
     cursor: grab;
+}
+
+.hidden {
+    display: none !important;
+}
+
+section.photo-view {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+ul.image-scroll-zone {
+    width: calc(max(40vw, min(100%, 200px)));
+    height: 100%;
+    margin: auto;
+    /* background: blue; */
+    display: grid;
+    grid-template-columns: 1fr;
+}
+
+li.dog-image-card::marker {
+    color: transparent;
+}
+
+li.dog-image-card {
+    background: white;
+    border: none;
+    border-radius: 1rem;
+    box-shadow: 1rem 1rem 30rem black;
+    padding: 1rem;
+    width: 100%;
+    height: fit-content;
+    margin-bottom: 1rem;
+}
+
+li.dog-image-card > img {
+    width: 100%;
+    object-fit: cover;
+    aspect-ratio: 1 / 1;
 }
