--- a/section06/css/index.css
+++ b/section06/css/index.css
@@ -1,5 +1,17 @@
 @import './common.css';
 
+/* animations */
+
+@keyframes skeleton {
+  from {
+    top: -100px;
+  }
+
+  to {
+    top: 100%;
+  }
+}
+
 /* Components */
 
 .container {
@@ -71,7 +83,7 @@
   z-index: 99;
 }
 
-.filter-emotion {
+.filter select {
   width: 120px;
   height: 40px;
   border-radius: var(--radius-sm);
@@ -107,7 +119,7 @@
   margin-right: var(--gap-xxs);
 }
 
-.filter-emotion.scrolled {
+.filter select.scrolled {
   color: var(--gray-w);
   border-color: var(--gray-b);
   background-color: var(--gray-b);
@@ -166,6 +178,11 @@
   overflow: hidden;
 }
 
+.emotion-card img {
+  max-width: 274px;
+  object-fit: cover;
+}
+
 .panel-info {
   padding: var(--gap-sm) var(--gap-xxs);
 }
@@ -218,4 +235,81 @@
   color: var(--gray-50);
   background-color: var(--gray-300);
   cursor: not-allowed;
+}
+
+.photo-list {
+  text-align: center;
+  padding-top: var(--gap-xxl);
+}
+
+.photo-list li + li {
+  margin-top: var(--gap-xxl);
+}
+
+.photo-item {
+  object-fit: cover;
+  width: 100%;
+  max-width: 640px;
+  height: 640px;
+  border-radius: var(--radius-sm);
+}
+
+.photo-item.basic,
+.skeleton.basic {
+  aspect-ratio: 1 / 1;
+}
+
+.photo-item.horizontal,
+.skeleton.horizontal {
+  aspect-ratio: 4 / 3;
+  max-height: 480px;
+}
+
+.photo-item.vertical,
+.skeleton.vertical {
+  aspect-ratio: 3 / 4;
+  height: 640px;
+  width: auto;
+  max-width: 480px;
+}
+
+.skeleton-area {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  gap: var(--gap-xxl);
+  padding-top: var(--gap-xxl);
+}
+
+.skeleton {
+  width: 100%;
+  border-radius: var(--radius-sm);
+  aspect-ratio: 1 / 1;
+  position: relative;
+  overflow: hidden;
+}
+
+.skeleton.photo {
+  max-width: 640px;
+  background-color: var(--gray-50);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.skeleton:after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 50%;
+  background-color: var(--gray-w);
+  filter: blur(30px);
+  opacity: 0.5;
+  animation-name: skeleton;
+  animation-duration: 1.5s;
+  animation-iteration-count: infinite;
+  animation-timing-function: cubic-bezier(0, 0.52, 0.77, 1.16);
 }
