--- a/01-diary/detail/detail_1208.css
+++ b/01-diary/detail/detail_1208.css
@@ -58,4 +58,9 @@
     .break_line {
         width: 100%;
     }
+
+    .write_diary_delete_select_modal_container {
+        width: 80%;
+        left: 10%;
+    }
 }
