--- a/01-diary/index_1208.css
+++ b/01-diary/index_1208.css
@@ -17,6 +17,9 @@
 
     .contents_left_item {
         width: 100%;
+
+        grid-template-columns: 1fr 1fr 1fr;
+        justify-items: center;
     }
 
     .diary_mood_img {
