--- a/01-diary/index.css
+++ b/01-diary/index.css
@@ -271,8 +271,8 @@
     padding: 1.5rem;
 
     position: absolute;
-    top: calc(50% - 40rem/2);
-    left: calc(50% - 35rem/2);
+    top: calc(50% - 35rem/2);
+    left: calc(50% - 40rem/2);
 
     background-color: white;
 
@@ -413,7 +413,7 @@
 
 /* Modal */
 .write_diary_select_modal_bg {
-    width: 40rem;
+    width: 100%;
     height: 100%;
 
     border-radius: 1rem;
@@ -444,7 +444,6 @@
 }
 
 .write_diary_modal_title_items {
-    width: 27rem;
     display: flex;
     flex-direction: column;
     gap: 1rem;
