--- a/01-diary/index_mobile.css
+++ b/01-diary/index_mobile.css
@@ -23,13 +23,45 @@
         padding: 0px 1.25rem 0px 1.25rem;
     }
 
+    .write_diary_title {
+        width: 100%;
+    }
+
+    .write_diary_mood_items {
+        width: 100%;
+    }
+
     .contents_left_item {
         order: 3;
 
         width: 100%;
 
-        display: grid;
+        /* display: grid; */
         grid-template-columns: 1fr 1fr;
+    }
+
+    .write_diary_modal_container {
+        width: 80%;
+        height: 50%;
+        overflow: scroll;
+        left: 10%;
+        top: 25%;
+    }
+
+    .write_diary_mood_buttonList {
+        display: grid;
+        grid-template-columns: 1fr;
+        column-gap: .75rem;
+    }
+
+    .write_diary_select_modal_bg {
+        width: 100%;
+        height: 100%;
+    }
+
+    .write_diary_select_modal_container {
+        width: 70%;
+        left: 15%;
     }
 
     .diary {
@@ -41,13 +73,6 @@
         height: 100%;
 
         object-fit: cover;
-    }
-    
-    .contents_right_item {
-        order: 1;
-
-        width: 100%;
-        height: 100%;
     }
 
     .write_diary {
@@ -62,7 +87,7 @@
         width: 100%;
         height: 100%;
         display: grid;
-        grid-template-columns: 1fr 1fr;
+        grid-template-columns: 1fr;
         column-gap: 1.25rem;
     }
 
