--- a/homework/diary.css
+++ b/homework/diary.css
@@ -44,6 +44,7 @@
     align-self: stretch;
     border-radius: 1.5rem; /* 24px -> 1.5rem */
     background: url('./img/banner.png');
+    overflow: hidden;
     margin-bottom: 1.5rem; /* 24px -> 1.5rem */
 }
 
@@ -866,6 +867,110 @@ select {
 
 
 
+
+.deleteModalContainer {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1000;
+}
+.deleteModalbackground {
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.5); /* 배경 투명도 설정 */
+    top: 0;
+    left: 0;
+    z-index: 999;
+}
+.deleteModal {
+    display: flex;
+    height: 200px;
+    width: 480px;
+    padding: 24px;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 24px;
+    background: #FFF;
+
+    position: absolute;
+    top: calc(50% - 200px/2); /*어디서 그리기 시작하는 포인트가 핵심*/
+    left: calc(50% - 480px/2);
+    background-color: white;
+    z-index: 1004;
+    padding: 24px;
+}
+
+
+
+/*강아지사진 페이지 관련*/
+.photoStorageContent {
+    display: none;
+}
+a {
+    text-decoration: none; 
+    color: inherit;
+  }
+
+a:visited {
+color: #ababab; /* 방문한 링크의 색상 */
+}
+
+.photoContainer {
+    display: flex;
+    gap: 10px;
+}
+.imageBox {
+    position: relative;
+    display: inline-block;
+    width: 640px;
+}
+.skeleton {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: lightgrey;
+    border-radius: 24px;
+}
+.skeleton-animation {
+    width: 100px;
+    height: 1000px;
+    background-color: white;
+    filter: blur(70px);
+    animation-name: loading;
+    animation-duration: 1.5s;
+    animation-iteration-count: infinite;
+}
+@keyframes loading {
+    from {
+        transform: translate(-400px, -400px) rotateZ(30deg);
+    }
+    to {
+        transform: translate(700px, 200px) rotateZ(30deg);
+    }
+}
+.hidden {
+    display: none;
+}
+.imageBox img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 24px;
+}
+#photoContainer {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 40px;
+    justify-content: center;
+    align-items: center;
+}
+
+
+
+
 @media (max-width: 360px) { 
     /* 360px에 맞춰서 스타일 조정 */
     body {
@@ -1002,6 +1107,100 @@ select {
         line-height: 20px; /* 111.111% */
         letter-spacing: -0.18px;
         gap: 20px;
+    }
+
+
+    /*모바일 모달 관련*/
+    .modal {
+        width: 320px;
+        height: 620px;
+        top: calc(50% - 620px / 2);
+        left: calc(50% - 320px / 2);
+        padding:24px;
+        gap: 24px;
+    }
+    .text1 {
+        width: 320px;
+        height: 24px;
+        color: #000;
+        font-family: "Pretendard Variable";
+        font-size: 20px;
+        font-style: normal;
+        font-weight: 600;
+        line-height: 24px;
+        letter-spacing: -0.2px;
+        margin-bottom: 16px;
+
+    } 
+
+    .radioboxInModal {
+        flex-direction: column;
+        gap: 12px;
+    }
+    .radioboxInModal input[type="radio"] {
+        margin: 0;
+        margin-right: 8px; /* 라디오 버튼과 텍스트 사이의 간격 설정 */
+    }
+    .titleInModal {
+        color: var(--Gray-Gray-800, #333);
+        font-family: "Pretendard Variable";
+        font-size: 12px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: 16px; /* 133.333% */
+        letter-spacing: -0.12px;
+    }
+    .titleInputModal {
+        width: 272px;
+        height: 40px;
+    }
+    .titleTextareaModal {
+        width: 272px;
+        height: 128px;
+        display: flex;
+        height: 128px;
+        padding: 8px 16px;
+        align-items: flex-start;
+        gap: 10px;
+        align-self: stretch;
+        border-radius: 8px;
+        border: 1px solid var(--Gray-Gray-200, #D4D3D3);
+        background: var(--Gray-W, #FFF);
+    }
+    .modalButtonContainer{
+
+    }
+    .text2 {
+
+    }
+    .radioboxInModal {
+        width: 320px;
+    }
+
+
+
+
+
+
+    /*사진보관함 관련css*/
+    .photoStorageContent {
+        padding: 20px;
+        width:360px
+    }
+    .imageBox {
+        position: relative;
+        display: inline-block;
+        width: 260px;
+    }
+    .imageBox img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        border-radius: 24px;
+    }
+    .selectbox2 {
+        width:320px;
+        margin-bottom: 32px;
     }
 
 }
