--- a/css/gallery.css
+++ b/css/gallery.css
@@ -40,4 +40,35 @@
 .galleryListWrap.ratio-3-4 li img {
   height: 640px;
   aspect-ratio: 3/4;
+}
+
+.skeleton_loading {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 5;
+  background: linear-gradient(120deg, #e5e5e5 30%, #f0f0f0 38%, #f0f0f0 40%, #e5e5e5 48%);
+  border-radius: 1rem;
+  background-size: 200% 100%;
+  background-position: 100% 0;
+  animation: load 1s infinite;
+}
+.skeleton_loading.hide {
+  animation: fadeOut 0.5s forwards;
+}
+
+@keyframes load {
+  100% {
+    background-position: -100% 0;
+  }
+}
+@keyframes fadeOut {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
 }/*# sourceMappingURL=gallery.css.map */
