--- a/scss/media.scss
+++ b/scss/media.scss
@@ -240,4 +240,18 @@
   .popup.alert .popupInner {
     height: auto;
   }
+
+  .galleryListWrap {
+    padding-left: 2.5rem;
+    padding-right: 2.5rem;
+  }
+
+  .viewTypeWrap {
+    padding-left: 1.25rem;
+    padding-right: 1.25rem;
+  }
+
+  .galleryListWrap.ratio-3-4 li img {
+    height: 23.25rem;
+  }
 }
