--- a/styles/diary.css
+++ b/styles/diary.css
@@ -30,10 +30,9 @@ header h1 {
 
 article .banner {
   height: 240px;
-  min-width: 320px;
   max-width: 1168px;
+  width: 100%;
   height: 240px;
-  min-width: 320px;
   border-radius: 24px;
   overflow: hidden;
   margin: 1.5rem auto;
@@ -606,12 +605,13 @@ textarea {
   aspect-ratio: 1/1;
   border-radius: 1.5rem;
   overflow: hidden;
-  background-color: #ccc;
 }
+
 #photoList .dog_photo_box img {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  background-color: #ccc;
 }
 #photoList .skeleton_stick {
   position: absolute;
