[240909] 일기 등록 모달에 다크모드를 전환할 수 있는 토글 스위치를 만들어 주세요.

--- a/styles/diary.css
+++ b/styles/diary.css
@@ -398,7 +398,7 @@ footer span {
   transform: translate(-50%, -50%);
 
   border-radius: 16px;
-  background-color: #fff;
+  background-color: var(--var-bg-color);
 }
 
 .add_buttons_wrap {
@@ -424,6 +424,7 @@ footer span {
   font-weight: 700;
   width: 100%;
   align-self: flex-start;
+  color: var(--var-text-color);
 }
 #modal_main_add form {
   width: 100%;
@@ -435,6 +436,7 @@ footer span {
   font-weight: 600;
   line-height: 24px;
   margin-bottom: 16px;
+  color: var(--var-text-color);
 }
 
 #modal_main_add form .feeling-radio-wrap {
@@ -464,7 +466,9 @@ footer span {
   height: 24px;
   background: url(../public/icons/radio_outline_light_m.svg) no-repeat center;
 }
-
+#modal_main_add form label {
+  color: var(--var-label-color);
+}
 #modal_main_add form .label-sm {
   font-size: 14px;
   font-style: normal;
@@ -490,9 +494,18 @@ textarea {
   align-items: center;
   gap: 10px;
   border-radius: 8px;
-  border: 1px solid #d4d3d3;
 }
 
+#modal_main_add form textarea,
+#modal_main_add form input {
+  background-color: var(--var-input-bg);
+  color: var(--var-input-text);
+  border: 1px solid var(--var-input-border);
+}
+#modal_main_add form textarea::placeholder,
+#modal_main_add form input::placeholder {
+  color: var(--var-input-placeholder);
+}
 #modal_main_add form textarea {
   resize: none;
   height: 128px;
@@ -516,17 +529,21 @@ textarea {
   justify-content: center;
   align-items: center;
   border-radius: 8px;
-  border: 1px solid #000;
+  background: var(--var-close-button-bg);
+  color: var(--var-close-button-text);
+  border: 1px solid var(--var-close-button-border);
 }
 
 #modal_main_add form button#submitBtn.none {
-  background: #c7c7c7;
-  color: #f2f2f2;
+  background: var(--var-disable-button-bg);
+  color: var(--var-disable-button-text);
+  border: 1px solid var(--var-disable-button-border);
 }
 
 #modal_main_add form button#submitBtn.active {
-  background: #333;
-  color: #f2f2f2;
+  background: var(--var-active-button-bg);
+  color: var(--var-active-button-text);
+  border: 1px solid var(--var-active-button-border);
 }
 
 #modal_depth2 {
@@ -620,6 +637,55 @@ textarea {
   background-color: #fff;
   filter: blur(100px);
   animation: skeleton_ui 0.5s linear infinite;
+}
+
+.toggle_style {
+  appearance: none;
+  width: 40px;
+  height: 24px;
+  border-radius: 20px;
+  background-color: lightgray;
+  cursor: pointer;
+}
+.toggle_style::after {
+  display: block;
+  content: '';
+  width: 20px;
+  height: 20px;
+  background-color: white;
+  border-radius: 50%;
+  margin: 2px;
+  transition: all 0.5s;
+}
+.toggle_style:checked {
+  background-color: greenyellow;
+}
+.toggle_style:checked:after {
+  display: block;
+  content: '';
+  width: 20px;
+  height: 20px;
+  background-color: white;
+  border-radius: 50%;
+  margin: 2px;
+  margin-left: 18px;
+}
+
+.modal_head {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+.theme_box {
+  display: flex;
+  gap: 0.5rem;
+}
+.theme_box label {
+  width: max-content;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px;
 }
 
 @keyframes skeleton_ui {
