--- a/Section6/css/picture.css
+++ b/Section6/css/picture.css
@@ -71,13 +71,13 @@ body {
 
 .CSS_메인 {
     display: flex;
-    width: 100%;
-    height: 100%;
     gap: 4rem;
     justify-content: center;
 }
 
 .CSS_레이아웃 {
+    width: 100%;
+    height: 100%;
     margin: 0 2rem 4rem;
 }
 
@@ -91,20 +91,27 @@ body {
 }
 
 .CSS_이미지영역 {
-
-    display: flex;
     gap: 2.4rem;
-    justify-content: center;
-}
- 
-.CSS_이미지 {
-    object-fit: cover;
+    width: 640px;
+    height: 640px;
     display: flex;
     flex-direction: column;
+}
+ /* style = "width: 640px; height:640px; border-radius: 24px; align-items: center; aspect-ration: 1 / 1 */
+
+
+.CSS_이미지 {
+    /* object-fit: cover;
+    display: flex;  
+    flex-direction: column;
     justify-content: center;
-
     aspect-ratio: 1 / 1;
-
-    border-radius: 24px; align-items: center;
-
+    border-radius: 24px; align-items: center; */
+    /* width: 640px;
+    height: 640px; */
+    
+    display: flex;
+    aspect-ratio: 1 /1 ;
+    flex-direction: column;
+    border-radius: 24px;
 }
