--- a/styles/diary.css
+++ b/styles/diary.css
@@ -707,6 +707,26 @@ textarea {
   border: 1px solid var(--var-close-button-border);
 }
 
+.search_wrapper {
+  display: flex;
+  align-items: center;
+  border: 1px solid #c7c7c7;
+  padding: 12px 16px;
+  min-width: 320px;
+  max-width: 360px;
+  border-radius: 100px;
+  gap: 0.5rem;
+}
+.search_wrapper input {
+  width: 100%;
+  border: none;
+  font-weight: 500;
+  line-height: 1.5rem;
+}
+.search_wrapper input:focus {
+  outline: none;
+}
+
 @keyframes skeleton_ui {
   from {
     transform: translate(-400px, -400px);
